<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false" />
    <TextView
        android:id="@+id/ingredientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"/>
</LinearLayout>
